fixing home emailmarketing on ie.

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -485,6 +485,7 @@ table ~ .navView {border-top:none; margin-top:-20px; padding:15px 10px;}
   padding:0;
   background:#f4f4f4 url(/img/bgChamadasBox.png) repeat-X center bottom;
 }
+.ie8 .chamadasBox div {width:29.6%;}
 
 .chamadasBox div:last-child {margin-right:0;}
 
